name:                licensor
version:             0.1.0
synopsis:            A license compatibility helper
description:         A license compatibility helper.
homepage:            https://github.com/jpvillaisaza/licensor
bug-reports:         https://github.com/jpvillaisaza/licensor/issues
license:             MIT
license-file:        LICENSE.md
author:              Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer:          Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
copyright:           2016 Juan Pedro Villa Isaza
category:            Distribution
extra-source-files:  README.md
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Licensor
  other-modules:
      Paths_licensor
  build-depends:
      base >= 4.8 && < 5.0
    , Cabal >= 1.22 && < 1.25
    , containers
    , directory
    , HTTP >= 4000.3 && < 4000.4
    , process
  default-language:
      Haskell2010
  ghc-options:
      -Wall

executable licensor
  main-is:
      Main.hs
  build-depends:
      base >= 4.8 && < 5.0
    , Cabal >= 1.22 && < 1.25
    , cmdargs >= 0.10 && < 0.11
    , containers
    , licensor
  default-language:
      Haskell2010
  ghc-options:
      -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/jpvillaisaza/licensor
